# node-software

./: .gitignore  README.md  pyproject.toml
data-acquisition/: pyproject.toml
data-acquisition/avert_system/: __init__.py  ctl.py
data-acquisition/avert_system/cli/: __init__.py  config_handler.py  query_handler.py  telemeter.py
data-acquisition/avert_system/drivers/: network_relay.py
data-acquisition/avert_system/drivers/gas/: __init__.py  novac.py  transfer2hub.py
data-acquisition/avert_system/drivers/gas/vaisala/: __init__.py  gmp343.py
data-acquisition/avert_system/drivers/geodetic/: __init__.py
data-acquisition/avert_system/drivers/geodetic/reftek/: configure.py  resolute_polar.py
data-acquisition/avert_system/drivers/imaging/: __init__.py  netcam.py
data-acquisition/avert_system/drivers/magnetic/: __init__.py
data-acquisition/avert_system/drivers/magnetic/nanometrics/: __init__.py  centaur.py
data-acquisition/avert_system/drivers/meteorologic/: __init__.py
data-acquisition/avert_system/drivers/power_regulators/: __init__.py  sunsaver.py
data-acquisition/avert_system/drivers/seismic/: __init__.py
data-acquisition/avert_system/instrument_drivers/gnss_loggers/reftek/: resolute_polar.py
data-acquisition/avert_system/instrument_drivers/magnetometers/: __init__.py
data-acquisition/avert_system/instrument_drivers/seismometers/: __init__.py
data-acquisition/avert_system/scripts/: __init__.py  config_handler.py  query_handler.py  telemeter.py
data-acquisition/avert_system/utilities/: __init__.py  core.py  errors.py  solar_tracker.py
data-acquisition/systemd_units/: harvest-data.timer  telemeter-data.timer
system-configuration/: node_config.toml
system-firmware/: pyproject.toml
system-firmware/avert_firmware/: __init__.py  ctl.py
system-firmware/avert_firmware/cli/: __init__.py  config_handler.py  query_handler.py  telemeter.py
system-firmware/avert_firmware/data_archival/: __init__.py  gas.py  gnss.py  images.py  miniseed.py
system-firmware/avert_firmware/drivers/: __init__.py  network_relay.py
system-firmware/avert_firmware/drivers/gas/: __init__.py  novac.py
system-firmware/avert_firmware/drivers/gas/vaisala/: gmp343.py
system-firmware/avert_firmware/drivers/geodetic/: __init__.py
system-firmware/avert_firmware/drivers/geodetic/reftek/: __init__.py  configure.py  resolute_polar.py
system-firmware/avert_firmware/drivers/imagery/: __init__.py  picam.py  stardot.py
system-firmware/avert_firmware/drivers/imagery/gigev/: __init__.py  libgigev.py
system-firmware/avert_firmware/drivers/imaging/: __init__.py  netcam.py
system-firmware/avert_firmware/drivers/imaging/gigev/: __init__.py
system-firmware/avert_firmware/drivers/magnetic/: __init__.py
system-firmware/avert_firmware/drivers/magnetic/nanometrics/: centaur.py
system-firmware/avert_firmware/drivers/meteorologic/: __init__.py
system-firmware/avert_firmware/drivers/power_regulators/: __init__.py  sunsaver.py
system-firmware/avert_firmware/drivers/seismic/: __init__.py
system-firmware/avert_firmware/utilities/: __init__.py  core.py  errors.py  solar_tracker.py
system-firmware/scripts/: file_monitor_node.py  migrate_server.py
system-firmware/systemd_units/: harvest-data.service  telemeter-data.service
(+9 files in other folders)
